fixed serialization bug and migrated to spring boot 3